Take another stab at fixing the LOCKDEBUG panic reported in PR kern/39940 and by Martti Kuparinen on current-users@:  replace the ioctl lock with finer-grained locking.  Lock the ports list and wait to if_clone_destroy() until all threads are out of the softc.

Thanks to Martti Kuparinen for testing these changes.