sys/net/agr/if_agrvar_impl.h
@@ -1,4 +1,4 @@
-/*	$NetBSD: if_agrvar_impl.h,v 1.8 2009/05/29 04:57:05 darran Exp $	*/
+/*	$NetBSD: if_agrvar_impl.h,v 1.9 2010/02/08 17:59:06 dyoung Exp $	*/
 
 /*-
  * Copyright (c)2005 YAMAMOTO Takashi,
@@ -103,8 +103,15 @@ struct agr_ifreq {
 };
 
 struct agr_softc {
-	kmutex_t sc_ioctl_lock;
+	kmutex_t sc_entry_mtx;
 	kmutex_t sc_lock;
+	kcondvar_t sc_ports_cv;
+	kcondvar_t sc_insc_cv;
+	int sc_noentry;
+	int sc_insc;
+	int sc_wrports;
+	int sc_rdports;
+	int sc_paused;
 	struct callout sc_callout;
 	int sc_nports;
 	TAILQ_HEAD(, agr_port) sc_ports;
@@ -125,9 +132,6 @@ struct agr_softc {
 void agr_lock(struct agr_softc *);
 void agr_unlock(struct agr_softc *);
 
-void agr_ioctl_lock(struct agr_softc *);
-void agr_ioctl_unlock(struct agr_softc *);
-
 int agrport_ioctl(struct agr_port *, u_long, void *);
 
 struct agr_softc *agr_alloc_softc(void);
@@ -139,6 +143,7 @@ int agr_xmit_frame(struct ifnet *, struct mbuf *); /* XXX */
 #define	AGR_STATIC(sc)		(((sc)->sc_if.if_flags & IFF_LINK1) != 0)
 
 void agrtimer_init(struct agr_softc *);
+void agrtimer_destroy(struct agr_softc *);
 void agrtimer_start(struct agr_softc *);
 void agrtimer_stop(struct agr_softc *);
 
